# tcria-09215b00

./: GOVERNANCE.md  GOVERNANCE_CORE_RULESET.md  README.md  generate_unified_governance_report_pdf.py  pyproject.toml  requirements.txt  run_governance_pipeline.py  tcria.spec
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  tcria---compliance-automation-blueprint.md  tcria.md
.github/workflows/: azure-webapps-python.yml  blank.yml  main_tcria-09215b00.yml  python-package-conda.yml
.well-known/: openai-apps-challenge
api/: api.py
app/: streamlit_app.py
docs/: Legal-narative-overview.md  architecture-real-overview.md  architecture.md  hash-trail-uniqueness-rule.md  index.md  technical-backlog.md
docs/project-snapshots/: README.md  approved_latest_project_structure_snapshot.json  approved_latest_project_structure_snapshot.md  current_project_structure_snapshot.json  current_project_structure_snapshot.md
examples/audit-artifacts/: README.md  tcr_gateway_accusation_bundle_audit.json  tcr_gateway_accusation_bundle_audit.md  tcr_gateway_accusation_bundle_audit_strict.json  (+18 more)
scripts/: README.md  __init__.py  audit_accusation_bundle_with_tcr_gateway.py  generate_blocked_artifacts_review.py  generate_case_preparation_summary.py  generate_case_timeline.py  generate_tcr_audit_report_pdf.py
tcria/: cli.py  engine.py  institutional_output.py  institutional_profiles.py  openai_responses.py
tests/: test_engine_smoke.py  test_governance_runtime.py  test_institutional_demo_case.py
web/: README.md  package.json  tailwind.config.ts
(+36 files in other folders)
